kustomize/namespaces/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    version: 0.0.11
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cd.apps.argoproj.io
      secretName: argocd-secret
  rules:
    - host: argocd.juantobon.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
